build: Adjust project output structure including location of types files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
     "allowJs": true,
     "isolatedModules": true,
     "esModuleInterop": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ]
   },
   "include": [
     "src/**/*"
