feat:example page and hot update

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dist/**/*"
   ],
   "scripts": {
-    "dev": "rollup -cw",
+    "dev": "rollup -wc config/rollup.config.dev.js  --bundleConfigAsCjs",
     "clean": "rimraf ./dist",
     "build": "rollup -c --bundleConfigAsCjs",
     "lint": "eslint src",
@@ -37,6 +37,8 @@
     "@rollup/plugin-strip": "^3.0.2",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-serve": "^2.0.2",
     "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
@@ -68,9 +70,5 @@
       "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
-  },
-  "dependencies": {
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^2.0.2"
   }
 }
